[tool.poetry]
name = "promptflow-101"
version = "0.1.0"
description = ""
authors = ["panachainy <panachai.ny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
promptflow = "^1.10.0"
promptflow-tools = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
